--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "start": "node hivocabulary-bot.js",
+    "start": "node vocabulary-bot.js",
     "dev": "nodemon vocabulary-bot.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "pg:init": "pg_ctlcluster init -D data",
@@ -14,13 +14,13 @@
     "startPostgres": "NODE_ENV=development && node index.js",
     "testPostgres": "echo \"Error: no test specified\" && exit 1"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3"
